--- a/src/components/main.css
+++ b/src/components/main.css
@@ -1,9 +1,9 @@
 .banner > * {
   z-index : 1;
   margin: 2.5vh 0;
-  -webkit-transition: all 1.6s ease 0s;
-  -moz-transition: all 1.6s ease 0s;
-  transition: all 1.6s ease 0s;
+  -webkit-transition: all 1.6s ease;
+  -moz-transition: all 1.6s ease;
+  transition: all 1.6s ease;
   color: cyan;
   text-shadow: -.9px 0 green, 0 .9px green, 
   .9px 0 green, 0 -.9px green;
@@ -22,7 +22,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  -webkit-transition: all 1.6s ease 0s;
-  -moz-transition: all 1.6s ease 0s;
-  transition: all 1.6s ease 0s;
+  -webkit-transition: all 1.6s ease;
+  -moz-transition: all 1.6s ease;
+  transition: all 1.6s ease;
 }
